--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   ffi:
   cupertino_icons: ^1.0.2
   watcher:
+  path_provider: ^2.0.2
+  velocity_x: ^3.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
