--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -20,12 +20,20 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access the photo to use for order.</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>$(PRODUCT_COPYRIGHT)</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access the photo to use for order.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access the photo to use for order.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
