--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  ffi:
   cupertino_icons: ^1.0.2
-  watcher:
   path_provider: ^2.0.2
   file_selector: ^0.7.0
   file_selector_macos: ^0.0.3
-  file_selector_web: 
+  file_selector_web: ^0.7.0+1
+
 
 
 dev_dependencies:
