--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   file_selector: ^0.7.0
   file_selector_macos: ^0.0.3
   file_selector_web: ^0.7.0+1
-
+  
+  firebase_core: "^0.7.0"
+  cloud_firestore: "^0.16.0+1"
 
 
 dev_dependencies:
